2003-11-13 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b11

	* Bugfix: Fixed wrong style.

	* Change: Fix Typo.
	
	* Change: Doctype is now more detailed.

	* New: Added function metatags() which writes metatags.
		- content-style-type
		- content-type
		- content-language

	* New: Added function common_header() which writes a commmon header
		- stylesheets
		- metatags

	* New: Added function unhtmlentities() which transforms html entities
	       back. This is necessary for Statusbar of IE and Opera.

	* Bugfix: When in Language Mode 0 (No ML at all) then check for
          PHP has gettext or not is skipped. So _() was undefined.
          Fixed now.

2003-11-13  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b10

	* Part 1 of 2 of improving skins capabilities.
	  - Added class="..." to various elements, mostly <a> tags.
	  - Modified popup_link() to accept a class for the <a> tag.
	  - Slightly rearranged admin/nav/bread boxes where needed.

	* Modified check_admins() in Config. Wizard to work better.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b9

	* Modified backup_albums.php to prevent a catch-22 situation.  You 
	  had to be logged in as admin to run the backup.  you can't login 
	  until you have upgraded your albums.  But you should backup 
	  before upgrading.  Fix is that you don't have to be admin to 
	  back up, and added instruction to remove the file again after 
	  backup.  Also changed timeout to 10 minutes, and added 
	  instructions about copying file from setup before running.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b8

	* "Not valid yet" was appearing under photos for non-logged in users.

	* Upgrades will work in versions that predate $userDB->getUidList().

2003-11-12  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b7

	* Added album summary to fetch-albums and fetch-albums-prune

	* Added resize_size to fetch-albums and fetch-albums-prune
