@@ -1,3 +1,7 @@
+2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b12
+
+	* Ignore config_version when running backup script.
+
 2003-11-13 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b11
 
 	* Bugfix: Fixed wrong style.
